Now a unit kind is invalid by default and should never be null.